2014-11-25  Andy Buckley  <andy.buckley@cern.ch>

	* Improving IO_AsciiParticles usability -- can now write to non-file streams.

	* Providing children() / parents() functions on GenVertex and GenParticle.

	* Providing preferred upper-case versions of IteratorRange enum values.

	* Add status() and set_status() aliases for Vertex::[set_]id().

	* Add rapidity and abs eta/rap methods to FourVector.

	* More constness improvements (hacked implementation, but improves API).

	* Add abs_pdg_id(), pid() and abspid() methods to GenParticle.

	* Allow CMake in-tree builds.

	* Add user-convenience HepMC/HepMC.h header.

2013-11-17  Andy Buckley  <andy.buckley@cern.ch>

	* Added more iterator access methods on GenVertex.

	* Adding vertices() and particles() aliases on GenEvent.

	* GenRanges clean-up and auto-including at the foot of GenEvent.h

	* Lots of "proper" inlining and noting bugs and TODOs.

2013-11-16  Andy Buckley  <andy.buckley@cern.ch>

	* Merging in code tiding changes from hg branch.

2013-10-16 Witek Pokorski

	* Conversion to Git version control (no code change)

2013-03-25  Lynn Garren

	* HepMC/HeavyIon.h: add centrality (defaults to zero)
	* HepMC/HepMCDefs.h: define HEPMC_HEAVY_ION_HAS_CENTRALITY
	* working release number is 2.07.00.a01

  --------------------------  HepMC-2.06.09  --------------------------

2012-06-05  Lynn Garren

     * configure.ac: explicitly disallow using configure with VC++
     * INSTALL*: improve build instructions

  --------------------------  HepMC-2.06.08  --------------------------

2012-02-16  Lynn Garren

     * src/GenEventStreamIO.cc: make sure we check the stream units
       if there is no unit line in the event header
     * test/testHepMC.cc.in: verify unit behavior

2012-02-10  Lynn Garren

     * cmake/Modules/HepMCVariables.cmake: deal with Windows

     * HepMC/GenEvent.h: add define_units()

  --------------------------  HepMC-2.06.07  --------------------------

2012-01-09  Lynn Garren
